worked on homepage corrected home page pic alignment

--- a/style.css
+++ b/style.css
@@ -8,6 +8,34 @@ body {
   font-family: "Montserrat", sans-serif !important;
 }
 
+.card {
+  perspective: 1000px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
 .hidden{
   opacity: 0;
   transition: all 1s;
@@ -65,6 +93,14 @@ nav {
 
 }
 
+.metrics{
+  width: 100%;
+  height: 100vh;
+  background-color: #f9bd00;
+  padding: 2em 0;
+
+}
+
 .div-1 {
   width: calc(50% - 40px);
   height: 100%;
@@ -94,6 +130,12 @@ nav {
   height: 80%;
 }
 
+.content > div{
+  margin-top:12em;
+}
+
+
+
 .main-text {
   padding-left: 1em;
   color: #f9bd00;
@@ -114,16 +156,17 @@ nav {
   font-size: 1.5em;
   line-height: 1.6em;
   font-weight: 600;
+  width: 80%;
 }
 
 .bottom-logo {
   position: absolute;
-  bottom: 0;
+  top: 0;
 }
 
 .bottom-logo > img {
-  width: 200px;
-  height: 100px;
+  width: 180px;
+  height: 80px;
 }
 
 .big-text {
@@ -136,6 +179,7 @@ nav {
 
 
 .main_pics{
+  margin-top:3em;
   position: absolute;
   top:-38%;
   left: 35%;
@@ -220,10 +264,13 @@ nav {
   }
 
   .div-1 {
+    padding-top:5em;
     width: 100%;
     padding-left: 1em;
     bottom: white;
   }
+
+
 
   .main-text {
     padding-left: 0;
@@ -240,6 +287,9 @@ nav {
 
   .sub-text {
     padding-left: 0;
+    font-size: 1.1em;
+    width: 100%;
+
   }
 
   .div-2 {
@@ -259,9 +309,7 @@ nav {
     line-height: 2em;
   }
 
-  .sub-text {
-    font-size: 1.1em;
-  }
+ 
 
   .desktop {
     display: none;
@@ -300,6 +348,10 @@ nav {
   
   }
 
+  /* .content > div{
+    margin-top:0;
+  } */
+
   .sub-text {
     font-size: 1.5em;
     padding-left: 0;
@@ -316,7 +368,6 @@ nav {
 }
 
 @media only screen and (min-width: 830px) and (max-width: 1258px) and (min-height: 500px) and (max-height: 700px) {
-  /* Your CSS rules here */
   .main-text h1{
     font-size: 1.2em !important;
     font-weight: 800 !important;
@@ -324,6 +375,15 @@ nav {
   
   
   }
+
+  .sub-text {
+    font-size: 1.5em;
+    padding-left: 0;
+    width: 100% !important
+  }
+  /* .content > div{
+    margin-top:0;
+  } */
 
 
   .main_pics{
